trunk/Archive2/da/2458c232bd893f/output
main.cpp: In function 'int main()':
main.cpp:9:5: error: static assertion failed: two_t and four_t are not equal!
     static_assert(std::is_same<two_t, four_t>::value,
     ^
main.cpp:11:19: error: 'assertion' does not name a type
     error: static assertion failed: "two_t and four_t are not a same types"
                   ^
main.cpp:11:5: warning: label 'error' defined but not used [-Wunused-label]
     error: static assertion failed: "two_t and four_t are not a same types"
     ^
